[project]
name = "zenoti_excel_automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "polars>=1.27.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.5",
]

[tool.uv]
no-build-isolation-package = []
